--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 .DS_Store
 node_modules
 /dist
+.history/
 
 # local env files
 .env.local
 .env.*.local
-./history/
+
 # Log files
 npm-debug.log*
 yarn-debug.log*
